# DmxPy

./: *.cabal  README.md
config/: .gitkeep  default.json
deploy/: .gitkeep
docs/: .gitkeep  usage.md
scripts/: 1761365656_2963.md  start.sh
src/: .gitkeep  1761365656_26157.json
src/main/: app.js
src/models/: .gitkeep  User.js
src/utils/: .gitkeep
tests/: 1761365656_26690.py  test_basic.js
