<?php
// DmxPy utility file: main

${config} = json_decode(file_get_contents('config.json'), true) ?? [];

function readFileContent(${filename}) {
    if(file_exists(${filename})) {
        return file_get_contents(${filename});
    }
    return null;
}

${data} = [
    "project" => "DmxPy",
    "file" => "main"
];

file_put_contents("output.json", json_encode(${data}, JSON_PRETTY_PRINT));

echo "Processed main for DmxPy\n";
?>

# Touch update: 1761365657

# Touch update: 1761365658

# Touch update: 1761365658
